crates/ruma-common/tests/it/identifiers/ui/03-invalid-new-id-macros.stderr
error: proc macro panicked
 --> tests/it/identifiers/ui/03-invalid-new-id-macros.rs:2:13
  |
2 |     let _ = ruma_common::session_id!("invalid~");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Invalid SessionId
  = note: this error originates in the macro `ruma_common::session_id` (in Nightly builds, run with -Z macro-backtrace for more info)
